fabric/1.21.11/knowledge/common/datapack-format.md
# 数据包格式速查（Fabric 1.21.11）

> Fabric 和 Forge 共享相同的数据包格式。本文件仅列出关键格式参考。
>
> **资源包 pack_format: `75`**（wiki 1.21.11）。数据包数值勿写 34；未在本轮官方表给出 1.21.11 数据编号时，以 minecraft.wiki data pack 页为准。

## 目录结构

```
src/main/resources/
└── data/{namespace}/
    ├── advancement/{id}.json
    ├── loot_table/{id}.json
    ├── recipe/{id}.json
    ├── tags/
    │   ├── block/{id}.json
    │   ├── item/{id}.json
    │   └── entity_type/{id}.json
    └── dimension_type/{id}.json
```

> 1.21 起这些分类目录名是**单数**（`advancement` / `loot_table` / `recipe` / `structure`），不要再抄 1.20.x 的复数写法；本档语料同形（`data/example-mod/loot_table/blocks/`、`data/example-mod/recipe/…`、`data/example-mod/advancement/get_dirt.json`），`mc-loottable` Skill 同口径。

## 配方格式

```json
{
  "type": "minecraft:crafting_shaped",
  "pattern": [
    "AAA",
    "ABA",
    "AAA"
  ],
  "key": {
    "A": { "item": "minecraft:diamond" },
    "B": { "item": "examplemod:my_item" }
  },
  "result": { "item": "examplemod:result_item", "count": 1 }
}
```

## 战利品表格式

```json
{
  "type": "minecraft:block",
  "pools": [
    {
      "rolls": 1,
      "entries": [
        {
          "type": "minecraft:item",
          "name": "examplemod:my_item"
        }
      ],
      "conditions": [
        { "condition": "minecraft:survives_explosion" }
      ]
    }
  ]
}
```

## 标签格式

```json
{
  "replace": false,
  "values": [
    "minecraft:diamond",
    "examplemod:my_item",
    { "id": "examplemod:custom_item", "required": false }
  ]
}
```

## 进度格式

```json
{
  "criteria": {
    "impossible": {
      "trigger": "minecraft:impossible"
    }
  }
}
```
